# agentforge

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  PRD.md  README.md  RESEARCH-2026-MULTI-AGENT-ORCHESTRATION.md  ROAST_REVIEW.md  ROAST_REVIEW_FIXED.md  ROAST_REVIEW_V2.md  STRUCTURE.md  agents.md  docker-compose.yml  handoff.md  memory.md  plan.md  progress.md  system-design.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_api_keys.py  0003_agent_memories.py
backend/app/: main.py
backend/app/api/v1/: api_keys.py  auth.py  costs.py  executions.py  mcp_servers.py  oauth.py  router.py  templates.py  webhooks.py  workflows.py  workspaces.py
backend/app/core/: config.py  database.py  deps.py  rate_limit.py  security.py  security_middleware.py  seed_mcp_servers.py  seed_templates.py
backend/app/engine/: checkpointer.py  compiler.py  executors.py  llm_client.py  model_pricing.yaml  validator.py
backend/app/mcp/: client.py
backend/app/models/: agent_memory.py  api_key.py  execution.py  misc.py  user.py  workflow.py  workspace.py
backend/app/services/: budget.py  langfuse_integration.py  tracing.py  webhook_delivery.py
backend/app/workers/: execution_worker.py
backend/tests/: conftest.py  test_auth.py  test_engine.py  test_validator.py  test_workflows.py
docs/adrs/: ADR-001-langgraph-over-crewai.md  ADR-002-postgresql-checkpointing.md  ADR-003-react-flow-for-dag-editor.md  ADR-004-simpleeval-over-eval.md  ADR-005-fastapi-async-over-django.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DarkModeToggle.tsx  ErrorBoundary.tsx  ErrorBoundaryWrapper.tsx
frontend/tests/: e2e.spec.ts
templates/: collection.yaml  intent-classifier.yaml  text-summarizer.yaml
(+18 files in other folders)
